<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/EcommerceTheme"
    tools:context=".userProfile.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_cart_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abl_cart_appbar">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_x"
                android:paddingTop="@dimen/fab_margin"
                android:paddingRight="@dimen/margin_x"
                android:paddingBottom="@dimen/fab_margin">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/iv_profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:src="@drawable/profile_image"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="1px" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/fab_margin_half"
                    android:text="UserName"
                    android:textSize="@dimen/heading_mideum"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_person_rol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/fab_margin_double"
                    android:text="cargo"
                    android:textColor="@color/fontLiteColor"
                    android:textSize="@dimen/heading_small" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="40dp">

                    <!--START OF SHIPPING METHOD CONATINER-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/fab_margin"
                        android:orientation="horizontal"
                        android:weightSum="3">

                    </LinearLayout>
                    <!--END OF SHIPPING METHOD CONATINER-->

                    <LinearLayout style="@style/AddressFormConatinerHalf">

                        <!--START OF EDITTEXT : FIRST NAME-->
                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginRight="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_dni" />

                            <EditText
                                android:id="@+id/et_person_dni"
                                style="@style/ETAddressForm" />

                        </LinearLayout>
                        <!--START OF EDITTEXT : FIRST NAME-->

                        <!--START OF EDITTEXT : LAST NAME-->
                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginLeft="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_celular" />

                            <EditText
                                android:id="@+id/et_person_celular"
                                style="@style/ETAddressForm" />
                        </LinearLayout>

                        <!--END OF EDITTEXT : LAST NAME-->

                    </LinearLayout>

                    <LinearLayout
                        style="@style/AddressFormConatinerHalf"
                        android:layout_marginTop="@dimen/margin_x"
                        android:layout_marginBottom="@dimen/margin_x"
                        android:visibility="gone">

                        <!--START OF EDITTEXT : FIRST NAME-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/et_person_fecha_nacimiento"
                                style="@style/ETRegistrationForm"
                                android:layout_width="171dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.5"
                                android:hint="Fecha" />

                            <ImageButton
                                android:id="@+id/btn_evento_fecha"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="0.5"
                                android:background="@null"

                                android:onClick="ObtenerFechaEvento"
                                android:src="@drawable/ic_fecha"
                                tools:ignore="ContentDescription" />

                        </LinearLayout>
                        <!--START OF EDITTEXT : FIRST NAME-->

                        <!--START OF EDITTEXT : LAST NAME-->

                        <!--END OF EDITTEXT : LAST NAME-->

                    </LinearLayout>

                    <LinearLayout style="@style/AddressFormConatinerHalf">

                        <!--START OF EDITTEXT : FIRST NAME-->
                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginRight="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_pemail" />

                            <EditText
                                android:id="@+id/et_person_email"
                                style="@style/ETAddressForm" />

                        </LinearLayout>
                        <!--START OF EDITTEXT : FIRST NAME-->

                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginRight="@dimen/fab_margin_half"
                            android:visibility="gone">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_direccion" />

                            <EditText
                                android:id="@+id/et_person_direccion"
                                style="@style/ETAddressForm" />
                        </LinearLayout>

                        <!--START OF EDITTEXT : LAST NAME-->

                        <!--END OF EDITTEXT : LAST NAME-->

                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        style="@style/AddressFormConatinerHalf">

                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginLeft="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_genero" />

                            <Spinner
                                android:id="@+id/spGenero"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                />
                        </LinearLayout>


                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginLeft="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_departamento" />

                            <Spinner
                                android:id="@+id/spDepartamento"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <!--START OF EDITTEXT : FIRST NAME-->

                        <!--START OF EDITTEXT : LAST NAME-->

                        <!--END OF EDITTEXT : LAST NAME-->

                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        style="@style/AddressFormConatinerHalf">

                        <!--START OF EDITTEXT : FIRST NAME-->
                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginRight="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_pprovince" />

                            <Spinner
                                android:id="@+id/spProvincia"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                />

                        </LinearLayout>

                        <LinearLayout
                            style="@style/AddressFormConatiner"
                            android:layout_marginLeft="@dimen/fab_margin_half">

                            <TextView
                                style="@style/TVAddressForm"
                                android:text="@string/input_pdistrict" />

                            <Spinner
                                android:id="@+id/spDistrito"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>


                <!--  <FrameLayout
                      android:id="@+id/btn_complete_address"
                      style="@style/BtnWithIconLeftContainer"
                      android:layout_marginTop="5dp"
                      android:background="@drawable/btn_round_small_primary">

                      <Button
                          android:id="@+id/btn_complete_address_inner"
                          style="@style/BtnWithIconLeft"
                          android:text="@string/btn_update" />

                  </FrameLayout>-->
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pbar_container"
        style="@style/QeasyProgressBarConatiner">

        <com.wang.avi.AVLoadingIndicatorView style="@style/QeasyProgressBar" />

    </RelativeLayout>

</RelativeLayout>