<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/EcommerceTheme"
    tools:context=".userLogin.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_cart_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/abl_cart_appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--START OF LOGIN AREA-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/fab_margin"
                android:paddingLeft="@dimen/margin_x"
                android:paddingRight="@dimen/margin_x"
                android:paddingTop="@dimen/fab_margin">

                <!--START OF LOGIN WITH PASSWORD AREA-->

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="203dp"
                    android:layout_height="103dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/bootic_logo" />

                <TextView
                    android:id="@+id/tv_login_msg"
                    style="@style/validationMsg" />

                <EditText
                    android:id="@+id/et_login_email"
                    style="@style/ETRegistrationForm"
                    android:hint="Usuario"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tv_validation_login_msg_email"
                    style="@style/validationMsg" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/fab_margin_half"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_login_password"
                            style="@style/ETRegistrationForm"
                            android:drawableRight="@drawable/bootic_logo"
                            android:hint="Contraseña"
                            android:inputType="textPassword"
                            android:paddingLeft="52dp" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:layout_width="@dimen/button_height"
                        android:layout_height="@dimen/button_height"
                        android:layout_alignParentBottom="true"
                        android:padding="12dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_lock_fill_black"
                        android:alpha="0.5"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_validation_login_msg_password"
                    style="@style/validationMsg" />

                <Button
                    android:id="@+id/btn_user_sign_in"
                    style="@style/BtnPrimary"
                    android:text="@string/btn_sign_in" />



              <!--  <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin_half"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textColor="@color/fontLiteColor" />-->

                <!--END OF LOGIN WITH PASSWORD AREA-->


                <!--START OF SIGN UP WRITING-->

           <LinearLayout style="@style/BottomRegLoginConatiner">

                    <TextView
                        style="@style/BottomRegLoginWriting"
                        android:text="@string/dont_hv_account" />



                </LinearLayout>
                <!--END OF SIGN UP WRITING-->



                <LinearLayout style="@style/BottomRegLoginConatiner">

                    <Button
                        android:id="@+id/btn_sign_ve"
                        style="@style/BtnPrimary"
                        android:text="@string/btn_registar"
                         />

                </LinearLayout>

            </LinearLayout>
            <!--END OF LOGIN AREA-->
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>